--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ glfw==2.8.0
 imageio==2.37.0
 networkx==3.2.1
 numpy==2.0.2
+opencv-python==4.11.0.86
 pillow==11.1.0
 pyglet==2.1.3
 PyOpenGL==3.1.0
