--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
+filelock==3.17.0
 freetype-py==2.5.1
+fsspec==2025.2.0
 glfw==2.8.0
 imageio==2.37.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 opencv-python==4.11.0.86
 pillow==11.1.0
 pyglet==2.1.3
@@ -11,4 +29,8 @@ pyquaternion==0.9.9
 pyrender==0.1.45
 scipy==1.13.1
 six==1.17.0
+sympy==1.13.1
+torch==2.6.0
 trimesh==4.6.4
+triton==3.2.0
+typing_extensions==4.12.2
